--- a/[FIXED] Achmea_Javascript_CodeChallenge.html
+++ b/[FIXED] Achmea_Javascript_CodeChallenge.html
@@ -36,7 +36,7 @@
             border-radius: 4px;
         }
         button {
-            background-color: #ff7300
+            background-color: #ff7300;
             color: white;
             font-weight: bold;
             border: none;
@@ -60,6 +60,7 @@
             <option value="car">Car Insurance</option>
             <option value="health">Health Insurance</option>
             <option value="home">Home Insurance</option>
+            <option value="travel">Travel Insurance</option>
         </select>
 
         <div id="carInputs" class="inputs">
@@ -76,7 +77,12 @@
             <label for="houseValue">House Value (€):</label>
             <input type="number" id="houseValue" min="0">
         </div>
-
+        
+        <div id="travelInputs" class="inputs" style="display: none;">
+            <label for="days">Days of Travel:</label>
+            <input type="number" id="days" min="0">
+        </div>
+        
         <button id="calculateBtn">Calculate Premium</button>
         <div class="result" id="result"></div>
     </div>
@@ -94,10 +100,12 @@
 
         // Show/Hide Inputs based on Insurance Type
         insuranceType.addEventListener('change', () => {
-            carInputs.style.display = insuranceType.value === 'car' ? 'block' : 'none';
-            healthInputs.style.display = insuranceType.value === 'health' ? 'block' : 'none';
-            homeInputs.style.display = insuranceType.value === 'home' ? 'block' : 'none';
-        });
+        carInputs.style.display = insuranceType.value === 'car' ? 'block' : 'none';
+        healthInputs.style.display = insuranceType.value === 'health' ? 'block' : 'none';
+        homeInputs.style.display = insuranceType.value === 'home' ? 'block' : 'none';
+        travelInputs.style.display = insuranceType.value === 'travel' ? 'block' : 'none';
+    });
+
 
         // Function to calculate premiums
         const calculatePremium = () => {
@@ -105,7 +113,7 @@
             let premium = 0;
 
             if (type === 'car') {
-                const carAge = parseString(document.getElementById('carAge').value);
+                const carAge = parseInt(document.getElementById('carAge').value);
                 if (isNaN(carAge) || carAge < 0) {
                     result.textContent = 'Please enter a valid car age.';
                     return;
@@ -127,11 +135,20 @@
                 premium = 75 + houseValue * 0.001;
             }
 
+            else if (type === 'travel') {
+                const days = parseInt(document.getElementById('days').value);
+                if (isNaN(days) || days <= 0) {
+                    result.textContent = 'Please enter a valid number of travel days.';
+                    return;
+                }
+    premium = 10 + days * 0.5;
+}
+
             result.textContent = `Your monthly premium for ${type.charAt(0).toUpperCase() + type.slice(1)} Insurance is €${premium.toFixed(2)}.`;
         };
 
         // Add event listener to Calculate Button
-        calculateBtn.addEventListener('click', calculatePremium_click);
+        calculateBtn.addEventListener('click', calculatePremium);
     </script>
 </body>
 </html>
